--- a/css/custom.css
+++ b/css/custom.css
@@ -25,7 +25,7 @@
     font-size: 1.2em;
 }
 
-.reveal .slides *:not(.icon) {
+.reveal .slides *:not(.icon):not(.fa):not(.fab) {
     font-family: "Ubuntu Mono" !important;
 }
 
